Update 03. Evolutionary Algorithms.md

--- a/notes/Evolutionary-computation/03. Evolutionary Algorithms.md
+++ b/notes/Evolutionary-computation/03. Evolutionary Algorithms.md
@@ -1,4 +1,5 @@
 # i) Evolutionary Algorithms
+<img src="https://cdn.botpenguin.com/assets/website/Evolutionary_Computation_01b6431b60.webp" alt="Nuts" width="400">
 
 Evolutionary computation is a field of optimization inspired by natural evolution. This lecture focuses on evolutionary algorithms (EAs), including genetic algorithms and real-coded evolutionary strategies.
 
@@ -34,13 +35,13 @@ Key concepts:
 - **Differential Evolution (DE)**
 
 ### Characteristics of Evolutionary Algorithms
-- **Population-based approach:** Maintain and evolve a group of candidate solutions.
+- **Population-based approach:** They are a stochastic local search optimization problem, where we maintain and evolve a group of candidate solutions.
 - **Use randomness:** Introduce stochastic elements to avoid local optima.
 
 ## 3. Generic Evolutionary Algorithm
 
 ```
-X0 := generate initial population of solutions
+X0 := generate initial *population* of solutions
 termination_flag := false
 t := 0
 
@@ -67,10 +68,11 @@ To apply an EA to a problem, the following are needed:
 - **Selection and Reproduction:** Guides the algorithm towards better solutions.
 
 #### **Exploration vs. Exploitation**
-- **Exploration:** Searching a wide range of possible solutions (mutation, crossover).
-- **Exploitation:** Refining known good solutions (selection, reproduction).
+- **Exploration:** Searching a wide range of possible solutions (variation operators).
+- **Exploitation:** Refining known good solutions (selection and reproduction).
 
 ## 5. Representation
+<img src="../../images/representation.png" alt="reverse" width="200">
 
 ### 5.1 Definition:
 **Representation** refers to encoding solutions in a way that allows the algorithm to manipulate and evaluate them.
