Update 03. Evolutionary Algorithms.md

--- a/notes/Evolutionary-computation/03. Evolutionary Algorithms.md
+++ b/notes/Evolutionary-computation/03. Evolutionary Algorithms.md
@@ -72,7 +72,7 @@ To apply an EA to a problem, the following are needed:
 - **Exploitation:** Refining known good solutions (selection and reproduction).
 
 ## 5. Representation
-<img src="../../images/representation.png" alt="reverse" width="200">
+<img src="../../images/representation.png" alt="reverse" width="400">
 
 ### 5.1 Definition:
 **Representation** refers to encoding solutions in a way that allows the algorithm to manipulate and evaluate them.
@@ -83,29 +83,23 @@ To apply an EA to a problem, the following are needed:
 - **Decoding Function:** Maps a genotype back to a phenotype.
 
 ### 5.2 Types of Representations
-- **Binary Representation** (traditionally used in genetic algorithms):
+- **Binary Representation** (traditionally used in genetic algorithms but inefficient):
   - Solutions encoded as bit strings.
   - Example: `{0,1,1,0,1,0}`
 - **Real Number Representation:**
   - Used for continuous variables.
   - Example: `{3.5, -2.7, 1.8}`
-- **Permutation Representation:**
-  - Used for ordering problems (e.g., Traveling Salesman Problem).
-  - Example: `{3,1,4,2,5}`
-- **Random Key Representation:**
-  - Encodes solutions as random floating-point numbers.
-- **Problem-Specific Representation:**
-  - Custom representations for specific domains.
+- **Also, Permutation Representation, Random Key Representation and Problem-Specific Representation**
 
 ### 5.3 Example of Binary Representation:
-A solution space mapped to binary:
+A solution space mapped to binary (bits string):
 ```
 Solution (x): -5    -3    0     3    5
 Binary:        0000  0100 1000 1100 1111
 ```
 
 ### 5.4 Decoding Function Example:
-Assume `x ∈ [-5, 5]` and we use a bit string of length 12, divided into three segments:
+Assume `x= {x1, x2, x3}` and `x ∈ [-5, 5]`. Use a bit string of length L= 12, therefore L/3 = 4 bits,  divided into three segments:
 ```
 Binary:   1101 0001 1111
 Segments: 13   1    15
@@ -116,33 +110,35 @@ Decoded:  3.667  -4.333  5
 
 ### 6.1 Mutation
 - **Definition:** Randomly flips bits with a small probability `p_m` (mutation rate).
+- The standard mutation rate `p_m = 1/L` but can be `p_m ∈ [1/L , 1/2]`
 - **Example:**
   - Parent: `00101011`
   - After mutation: `01101001`
+- With a small mutation rate, the effect is like a minor perturbation, similar to local search.  
+- With a higher mutation rate, it can introduce more randomness, potentially leading to greater exploration.  
 
-### 6.2 Crossover
-- **Definition:** Combines genetic material from two parents.
-- **Types:**
-  - **One-Point Crossover:** Swaps genes after a single crossover point.
-  - **N-Point Crossover:** Uses multiple crossover points.
-  - **Uniform Crossover:** Each gene is randomly chosen from either parent.
+### 6.2 Crossover  
+- **Definition:** Combines genetic material from two parent solutions to create offspring.  
+- **Types:**  
+  - **One-Point Crossover:** A single crossover point is selected, and genes are swapped after this point.  
+  - **N-Point Crossover:** Multiple crossover points are used, alternating segments between parents.  
+  - **Uniform Crossover:** Each gene is randomly inherited from either parent with equal probability.  
 
-### 6.3 Crossover Example:
+### 6.3 Crossover Example  
+**Crossover Point:** After the third gene  
 ```
 One-Point Crossover:
-Parent 1:  101011
-Parent 2:  110100
-Child 1:   101100
-Child 2:   110011
+Parent 1: 101|011
+Parent 2: 110|100
+Child 1: 101|100
+Child 2: 110|011
 ```
 
 ---
 
-# ii) Real-Valued Coded Evolutionary Algorithms
+## 7. Pros and Cons of Binary Genetic Algorithms (GAs)
 
-## 1. Pros and Cons of Binary Genetic Algorithms (GAs)
-
-### 1.1 Advantages of Binary Coding
+### 7.1 Advantages of Binary Coding
 - **Implicit Parallelism:**
   - Binary encoding enables the efficient exploration of multiple schemata (templates describing patterns in bit strings) simultaneously.
   - A chromosome of length \(L\) contains \(3^L\) schemata, leading to an extensive search space.
@@ -153,7 +149,7 @@ Child 2:   110011
     - Schema 2: `****01**`
   - By evaluating and selecting fitter schemata, a GA can optimize efficiently.
 
-### 1.2 Disadvantages of Binary Coding
+### 7.2 Disadvantages of Binary Coding
 
 #### **Hamming Cliff Problem**
 - Mutation in binary encoding can cause large or small jumps in phenotype values.
@@ -190,9 +186,9 @@ Child 2:   110011
 
 ---
 
-## 2. Real-Valued Vector Representation
+## 8. Real-Valued Vector Representation
 
-### 2.1 Why Use Real-Valued Encoding?
+### 9.1 Why Use Real-Valued Encoding?
 - More natural representation for continuous optimization problems.
 - Avoids issues like redundancy and precision loss.
 - No distinction between genotype and phenotype; the chromosome is simply a vector of real numbers.
@@ -203,7 +199,7 @@ Child 2:   110011
 - Better numerical precision.
 - Easily scalable for high-dimensional problems.
 
-### 2.2 Representation:
+### 9.2 Representation:
 Each solution is represented as:
 \[ x = [x_1, x_2, \dots, x_n] \in \mathbb{R}^n \]
 
@@ -211,9 +207,9 @@ Each gene corresponds to a variable in the optimization problem.
 
 ---
 
-## 3. Variation Operators for Real-Valued Encoding
+## 10. Variation Operators for Real-Valued Encoding
 
-### 3.1 Mutation
+### 10.1 Mutation
 Randomly selects a parent with probability \( p_m \) and modifies a gene.
 
 #### **Types of Mutation:**
@@ -238,7 +234,7 @@ Randomly selects a parent with probability \( p_m \) and modifies a gene.
    - \( \Delta(t, y) = y (1 - r^{(1 - \frac{t}{g_m})^b}) \)
 
 
-### 3.2 Crossover
+### 10.2 Crossover
 Combines genetic material from two parents to create offspring.
 
 #### **Types of Crossover:**
@@ -268,12 +264,9 @@ Combines genetic material from two parents to create offspring.
 
 ---
 
-# iii) Evolutionary Algorithms: Selection and Reproduction
----
+## 11. Selection
 
-## 1. Selection
-
-### 1.1 Generic Evolutionary Algorithm
+### 11.1 Generic Evolutionary Algorithm
 
 ```
 X0 := generate initial population of solutions
@@ -293,7 +286,7 @@ while (terminationflag != true):
 Output best solution found
 ```
 
-### 1.2 Selection Process
+### 11.2 Selection Process
 - **Not a search operator** but heavily influences search performance.
 - **Precedes variation operators**: selects individuals for breeding.
 - **Key Idea:**
@@ -304,7 +297,7 @@ Output best solution found
 - Prevents premature convergence.
 - Avoids getting stuck in local optima.
 
-### 1.3 Selection Schemes
+### 11.3 Selection Schemes
 1. **Fitness Proportional Selection (Roulette Wheel Selection)**
 2. **Ranking Selection**
 3. **Truncation Selection**
@@ -313,7 +306,7 @@ Output best solution found
 
 ---
 
-### 1.4 Fitness Proportional Selection
+### 11.4 Fitness Proportional Selection
 - **Definition:** Each individual is selected with probability:
   \[
 p_i = \frac{f_i}{\sum_{j=1}^{M} f_j}
@@ -335,7 +328,7 @@ p_i = \frac{f_i}{\sum_{j=1}^{M} f_j}
 
 ---
 
-### 1.5 Ranking Selection
+### 11.5 Ranking Selection
 - Sort population from best to worst based on fitness.
 - Selection probability \( p(γ) \) is assigned based on rank \( γ \):
   - **Linear Ranking:**
@@ -346,7 +339,7 @@ p_i = \frac{f_i}{\sum_{j=1}^{M} f_j}
 
 ---
 
-### 1.6 Truncation Selection
+### 11.6 Truncation Selection
 - **Steps:**
   1. Rank individuals by fitness.
   2. Select top \( k \)% for reproduction (e.g., top 50% or 30%).
@@ -356,7 +349,7 @@ p_i = \frac{f_i}{\sum_{j=1}^{M} f_j}
 
 ---
 
-### 1.7 Tournament Selection
+### 11.7 Tournament Selection
 - **Steps:**
   1. Randomly select \( k \) individuals from population.
   2. Choose the fittest individual from the subset.
@@ -367,7 +360,7 @@ p_i = \frac{f_i}{\sum_{j=1}^{M} f_j}
 
 ---
 
-### 1.7 (μ+λ) and (μ,λ) Selection
+### 11.7 (μ+λ) and (μ,λ) Selection
 - Used in **Evolution Strategies**.
 
 #### **(μ+λ) Selection:**
@@ -383,7 +376,7 @@ p_i = \frac{f_i}{\sum_{j=1}^{M} f_j}
 
 ---
 
-### 1.8 Selection Pressure
+### 11.8 Selection Pressure
 **Selection Pressure:** Degree to which selection favors better individuals.
 
 #### **Effects:**
@@ -404,9 +397,9 @@ p_i = \frac{f_i}{\sum_{j=1}^{M} f_j}
 
 ---
 
-## 2. Reproduction
+## 12. Reproduction
 
-### 2.2 Genetic Algorithm Reproduction Strategies
+### Genetic Algorithm Reproduction Strategies
 - **Reproduction controls how the next generation is created.**
 - **Types:**
   - **Generational Replacement:** Entire population is replaced.
