Update 03. Evolutionary Algorithms.md

--- a/notes/Evolutionary-computation/03. Evolutionary Algorithms.md
+++ b/notes/Evolutionary-computation/03. Evolutionary Algorithms.md
@@ -1,5 +1,5 @@
 # i) Evolutionary Algorithms
-<img src="https://cdn.botpenguin.com/assets/website/Evolutionary_Computation_01b6431b60.webp" alt="Nuts" width="400">
+<img src="https://cdn.botpenguin.com/assets/website/Evolutionary_Computation_01b6431b60.webp" alt="EA" width="400">
 
 Evolutionary computation is a field of optimization inspired by natural evolution. This lecture focuses on evolutionary algorithms (EAs), including genetic algorithms and real-coded evolutionary strategies.
 
@@ -72,7 +72,7 @@ To apply an EA to a problem, the following are needed:
 - **Exploitation:** Refining known good solutions (selection and reproduction).
 
 ## 5. Representation
-<img src="../../images/representation.png" alt="reverse" width="400">
+<img src="../../images/representation.png" alt="Representation" width="400">
 
 ### 5.1 Definition:
 **Representation** refers to encoding solutions in a way that allows the algorithm to manipulate and evaluate them.
@@ -109,6 +109,8 @@ Decoded:  3.667  -4.333  5
 ## 6. Variation Operators
 
 ### 6.1 Mutation
+<img src="https://editor.analyticsvidhya.com/uploads/550041623128158975.png" alt="Mutation" width="400">
+
 - **Definition:** Randomly flips bits with a small probability `p_m` (mutation rate).
 - The standard mutation rate `p_m = 1/L` but can be `p_m ∈ [1/L , 1/2]`
 - **Example:**
@@ -118,6 +120,8 @@ Decoded:  3.667  -4.333  5
 - With a higher mutation rate, it can introduce more randomness, potentially leading to greater exploration.  
 
 ### 6.2 Crossover  
+<img src="https://www.tutorialspoint.com/genetic_algorithms/images/one_point_crossover.jpg" alt="Crossover" width="400">
+
 - **Definition:** Combines genetic material from two parent solutions to create offspring.  
 - **Types:**  
   - **One-Point Crossover:** A single crossover point is selected, and genes are swapped after this point.  
