Update 03. Evolutionary Algorithms.md

--- a/notes/Evolutionary-computation/03. Evolutionary Algorithms.md
+++ b/notes/Evolutionary-computation/03. Evolutionary Algorithms.md
@@ -1,11 +1,7 @@
 # i) Evolutionary Algorithms
 <img src="https://cdn.botpenguin.com/assets/website/Evolutionary_Computation_01b6431b60.webp" alt="EA" width="400">
 
-Evolutionary computation is a field of optimization inspired by natural evolution. This lecture focuses on evolutionary algorithms (EAs), including genetic algorithms and real-coded evolutionary strategies.
-
-## 1. Evolutionary Algorithms
-
-### 1.1 How Evolution Works in Nature
+## 1. Evolution in Nature
 
 **Definition:** Evolution refers to the change in the inherited characteristics of biological populations over successive generations.
 
@@ -17,14 +13,17 @@ Key concepts:
   - **Migration:** Movement of genes between populations.
 - **Natural Selection:** The principle of "survival of the fittest," where beneficial traits become more common over time.
 
-### 1.2 What Evolution Taught Us
+### What Evolution Taught Us
 
 - Living organisms are modified versions of their ancestors.
 - Evolution is guided by natural selection.
 
+
 #### **Question:** How does this relate to optimization?
-- **Fitness** in optimization corresponds to how well a solution performs.
-- **Individuals of a species** correspond to candidate solutions in an algorithm.
+> **Fitness** in optimization corresponds to how well a solution performs.    
+> **Individuals of a species** correspond to candidate solutions in an algorithm.
+
+---
 
 ## 2. What are Evolutionary Algorithms?
 
@@ -37,6 +36,8 @@ Key concepts:
 ### Characteristics of Evolutionary Algorithms
 - **Population-based approach:** They are a stochastic local search optimization problem, where we maintain and evolve a group of candidate solutions.
 - **Use randomness:** Introduce stochastic elements to avoid local optima.
+
+---
 
 ## 3. Generic Evolutionary Algorithm
 
@@ -59,6 +60,8 @@ while (termination_flag != true):
 Output best solution found
 ```
 
+---
+
 ## 4. Building Blocks of Evolutionary Algorithms
 
 To apply an EA to a problem, the following are needed:
@@ -71,18 +74,19 @@ To apply an EA to a problem, the following are needed:
 - **Exploration:** Searching a wide range of possible solutions (variation operators).
 - **Exploitation:** Refining known good solutions (selection and reproduction).
 
+---
+
 ## 5. Representation
 <img src="../../images/representation.png" alt="Representation" width="400">
 
-### 5.1 Definition:
-**Representation** refers to encoding solutions in a way that allows the algorithm to manipulate and evaluate them.
+**Definition**: Representation refers to encoding solutions in a way that allows the algorithm to manipulate and evaluate them.
 
 - **Phenotype:** The actual solution (e.g., a number or a path in a graph).
 - **Genotype:** The encoded form used by the algorithm (e.g., binary string).
 - **Encoding Function:** Maps a phenotype to a genotype.
 - **Decoding Function:** Maps a genotype back to a phenotype.
 
-### 5.2 Types of Representations
+### 5.1 Types of Representations
 - **Binary Representation** (traditionally used in genetic algorithms but inefficient):
   - Solutions encoded as bit strings.
   - Example: `{0,1,1,0,1,0}`
@@ -91,14 +95,16 @@ To apply an EA to a problem, the following are needed:
   - Example: `{3.5, -2.7, 1.8}`
 - **Also, Permutation Representation, Random Key Representation and Problem-Specific Representation**
 
-### 5.3 Example of Binary Representation:
+---
+
+### 5.2 Example of Binary Representation:
 A solution space mapped to binary (bits string):
 ```
 Solution (x): -5    -3    0     3    5
 Binary:        0000  0100 1000 1100 1111
 ```
 
-### 5.4 Decoding Function Example:
+### 5.3 Decoding Function Example:
 Assume `x= {x1, x2, x3}` and `x ∈ [-5, 5]`. Use a bit string of length L= 12, therefore L/3 = 4 bits,  divided into three segments:
 ```
 Binary:   1101 0001 1111
@@ -106,36 +112,39 @@ Segments: 13   1    15
 Decoded:  3.667  -4.333  5
 ```
 
-## 6. Variation Operators
+---
+
+## 6. Variation Operators for Binary Genetic Algorithms
 
 ### 6.1 Mutation
-<img src="https://editor.analyticsvidhya.com/uploads/550041623128158975.png" alt="Mutation" width="400">
-
 - **Definition:** Randomly flips bits with a small probability `p_m` (mutation rate).
 - The standard mutation rate `p_m = 1/L` but can be `p_m ∈ [1/L , 1/2]`
 - **Example:**
   - Parent: `00101011`
   - After mutation: `01101001`
 - With a small mutation rate, the effect is like a minor perturbation, similar to local search.  
-- With a higher mutation rate, it can introduce more randomness, potentially leading to greater exploration.  
+- With a higher mutation rate, it can introduce more randomness, potentially leading to greater exploration.
+
+<img src="https://editor.analyticsvidhya.com/uploads/550041623128158975.png" alt="Mutation" width="400">
+
+---
 
 ### 6.2 Crossover  
-<img src="https://www.tutorialspoint.com/genetic_algorithms/images/one_point_crossover.jpg" alt="Crossover" width="400">
-
 - **Definition:** Combines genetic material from two parent solutions to create offspring.  
 - **Types:**  
   - **One-Point Crossover:** A single crossover point is selected, and genes are swapped after this point.  
   - **N-Point Crossover:** Multiple crossover points are used, alternating segments between parents.  
   - **Uniform Crossover:** Each gene is randomly inherited from either parent with equal probability.  
 
-### 6.3 Crossover Example  
-**Crossover Point:** After the third gene  
+<img src="https://www.tutorialspoint.com/genetic_algorithms/images/one_point_crossover.jpg" alt="Crossover" width="400">
+
+#### Crossover Example  
 ```
-One-Point Crossover:
+One-Point Crossover "After the third gene":
 Parent 1: 101|011
 Parent 2: 110|100
-Child 1: 101|100
-Child 2: 110|011
+Child 1:  101|100
+Child 2:  110|011
 ```
 
 ---
