Update 03. Evolutionary Algorithms.md

--- a/notes/Evolutionary-computation/03. Evolutionary Algorithms.md
+++ b/notes/Evolutionary-computation/03. Evolutionary Algorithms.md
@@ -1,23 +1,15 @@
 # i) Evolutionary Algorithms
-<img src="https://cdn.botpenguin.com/assets/website/Evolutionary_Computation_01b6431b60.webp" alt="EA" width="400">
+<img src="https://www.baeldung.com/wp-content/uploads/sites/4/2021/08/EA-1024x469.png" alt="EA" width="400">
 
-## 1. Evolution in Nature
+## 1. Evolution
 
 **Definition:** Evolution refers to the change in the inherited characteristics of biological populations over successive generations.
 
 Key concepts:
 - **Heritable Characteristics:** Traits passed from one generation to the next via DNA (e.g., eye color).
 - **Genetic Variation:** The changes responsible for diversity within a species, driven by:
-  - **Mutations:** Random changes in DNA.
-  - **Crossover:** Genetic recombination through reproduction.
-  - **Migration:** Movement of genes between populations.
+  - **Mutations:** Random changes in DNA. **Crossover:** Genetic recombination through reproduction. **Migration:** Movement of genes between populations.
 - **Natural Selection:** The principle of "survival of the fittest," where beneficial traits become more common over time.
-
-### What Evolution Taught Us
-
-- Living organisms are modified versions of their ancestors.
-- Evolution is guided by natural selection.
-
 
 #### **Question:** How does this relate to optimization?
 > **Fitness** in optimization corresponds to how well a solution performs.    
@@ -76,7 +68,7 @@ To apply an EA to a problem, the following are needed:
 
 ---
 
-## 5. Representation
+### Representation
 <img src="../../images/representation.png" alt="Representation" width="400">
 
 **Definition**: Representation refers to encoding solutions in a way that allows the algorithm to manipulate and evaluate them.
@@ -86,7 +78,7 @@ To apply an EA to a problem, the following are needed:
 - **Encoding Function:** Maps a phenotype to a genotype.
 - **Decoding Function:** Maps a genotype back to a phenotype.
 
-### 5.1 Types of Representations
+#### Types of Representations
 - **Binary Representation** (traditionally used in genetic algorithms but inefficient):
   - Solutions encoded as bit strings.
   - Example: `{0,1,1,0,1,0}`
@@ -96,15 +88,16 @@ To apply an EA to a problem, the following are needed:
 - **Also, Permutation Representation, Random Key Representation and Problem-Specific Representation**
 
 ---
+## 5. Binary Encoding
 
-### 5.2 Example of Binary Representation:
+### 5.1 Example of Binary Representation:
 A solution space mapped to binary (bits string):
 ```
 Solution (x): -5    -3    0     3    5
 Binary:        0000  0100 1000 1100 1111
 ```
 
-### 5.3 Decoding Function Example:
+### 5.2 Decoding Function Example:
 Assume `x= {x1, x2, x3}` and `x ∈ [-5, 5]`. Use a bit string of length L= 12, therefore L/3 = 4 bits,  divided into three segments:
 ```
 Binary:   1101 0001 1111
@@ -114,9 +107,9 @@ Decoded:  3.667  -4.333  5
 
 ---
 
-## 6. Variation Operators for Binary Genetic Algorithms
+### 5.3 Variation Operators for Binary Genetic Algorithms
 
-### 6.1 Mutation
+#### Mutation
 - **Definition:** Randomly flips bits with a small probability `p_m` (mutation rate).
 - The standard mutation rate `p_m = 1/L` but can be `p_m ∈ [1/L , 1/2]`
 - **Example:**
@@ -129,7 +122,7 @@ Decoded:  3.667  -4.333  5
 
 ---
 
-### 6.2 Crossover  
+#### Crossover  
 - **Definition:** Combines genetic material from two parent solutions to create offspring.  
 - **Types:**  
   - **One-Point Crossover:** A single crossover point is selected, and genes are swapped after this point.  
@@ -138,7 +131,7 @@ Decoded:  3.667  -4.333  5
 
 <img src="https://www.tutorialspoint.com/genetic_algorithms/images/one_point_crossover.jpg" alt="Crossover" width="400">
 
-#### Crossover Example  
+Crossover Example  
 ```
 One-Point Crossover "After the third gene":
 Parent 1: 101|011
@@ -149,137 +142,198 @@ Child 2:  110|011
 
 ---
 
-## 7. Pros and Cons of Binary Genetic Algorithms (GAs)
+### 5.4 Advantage of Binary Coding: Implicit Parallelism  
 
-### 7.1 Advantages of Binary Coding
-- **Implicit Parallelism:**
-  - Binary encoding enables the efficient exploration of multiple schemata (templates describing patterns in bit strings) simultaneously.
-  - A chromosome of length \(L\) contains \(3^L\) schemata, leading to an extensive search space.
+Binary coding in genetic algorithms enables **implicit parallelism**, allowing efficient exploration of large search spaces by evaluating multiple solution patterns (**schemas**) simultaneously.
+
+#### **How It Works**   
+- **Schemas Represent Patterns**  
+  A **schema** is a template that groups similar solutions, reducing the need to test every individual separately.  
   - Example:
-    - Chromosome 1: `10110110`
-    - Chromosome 2: `00100100`
-    - Schema 1: `*0**01*0`
-    - Schema 2: `****01**`
-  - By evaluating and selecting fitter schemata, a GA can optimize efficiently.
+    | Chromosome/Schema | Representation  |
+    |------------------|----------------|
+    | **Chromosome 1** | `10110110`      |
+    | **Chromosome 2** | `00100100`      |
+    | **Schema 1**     | `*0**01*0`      |
+    | **Schema 2**     | `****01**`      |
 
-### 7.2 Disadvantages of Binary Coding
+- **Massive Parallel Evaluation**  
+  - A chromosome of length **L** contains **\(3^L\)** possible schemas (0, 1, or * per position).  
+  - With **M** individuals, the algorithm processes up to **\(M \times 3^L\)** schemas at once.  
+  - This allows a small population to explore a vast number of potential solutions efficiently.
 
-#### **Hamming Cliff Problem**
+- **Faster Optimization**  
+  - The algorithm selects and evolves fitter schemas over generations.  
+  - Instead of testing every possible solution, it **identifies promising patterns early**, leading to quicker convergence.  
+
+---
+
+### 5.5 Drawbacks of Binary Coding
+
+#### 5.5.1 **Hamming Cliff Problem**
 - Mutation in binary encoding can cause large or small jumps in phenotype values.
 - Example:
-  - **Genotypes (Binary Representation):** `000`, `001`, `010`, `011`, `100`, `101`, `110`, `111`
-  - **Corresponding Phenotypes:** `0`, `1`, `2`, `3`, `4`, `5`, `6`, `7`
+    | **Genotypes (Binary)**   | `000` | `001` | `010` | `011` | `100` | `101` | `110` | `111` |
+    |-------------------------|------|------|------|------|------|------|------|------|
+    | **Phenotypes (Decimal)** |  0   |  1   |  2   |  3   |  4   |  5   |  6   |  7   |
+
+
 - Problem: A one-bit mutation may result in a large jump (e.g., `011 → 100`, which is a jump from `3` to `4`).
 
-##### **Solution: Gray Encoding**
-- Gray encoding ensures small changes in genotype lead to small phenotype changes.
-- Example:
-  - **Binary Encoding:** `000`, `001`, `010`, `011`, `100`, `101`, `110`, `111`
-  - **Gray Encoding:** `000`, `001`, `011`, `010`, `110`, `111`, `101`, `100`
-- Uses XOR operation for conversion:
-  - \( b_i = a_i \) if \( i = 1 \)
-  - \( b_i = a_{i-1} \oplus a_i \) if \( i > 1 \)
+**Solution: Gray Encoding**  
 
-#### **Redundancy Issue in Discrete Search Spaces**
+Gray encoding prevents large jumps in bit changes, ensuring **small changes in genotype (binary representation) lead to small changes in phenotype (decimal values).**  
+This helps **avoid the Hamming cliff problem**, where consecutive binary values may differ by multiple bits.
+
+**Conversion Using XOR Operation:**  
+Gray encoding is derived from binary using the following formula:
+
+$$
+b_i =
+\begin{cases} 
+a_i, & \text{if } i = 1 \\ 
+a_{i-1} \oplus a_i, & \text{if } i > 1
+\end{cases}
+$$
+
+Where:
+- \(a\) is the **binary number**.
+- \(b\) is the **Gray encoded value**.
+- $\oplus$ is the **XOR operation** (1 if bits are different, 0 if they are the same).
+
+**Example**  
+Let’s convert **Binary `101`** to **Gray Code**:
+- **First bit remains the same:** $b_1 = a_1 = 1$
+- **XOR the first two bits:** $b_2 = a_1 \oplus a_2 = 1 \oplus 0 = 1$
+- **XOR the second and third bits:** $b_3 = a_2 \oplus a_3 = 0 \oplus 1 = 1$
+Thus, **Binary `101` → Gray Code `111`**.
+
+**Example 2: Binary to Gray Code Conversion**  
+| **Binary Encoding**      | `000` | `001` | `010` | `011` | `100` | `101` | `110` | `111` |
+|-------------------------|------|------|------|------|------|------|------|------|
+| **Gray Encoding**       | `000` | `001` | `011` | `010` | `110` | `111` | `101` | `100` |
+| **Phenotype (Decimal)** |  0   |  1   |  2   |  3   |  4   |  5   |  6   |  7   |
+
+---
+
+#### 5.5.2 **Redundancy Problem in Discrete Search Spaces**
 - If the number of valid solutions is not a power of two, some binary strings will be redundant.
 - Example:
-  - Consider a set of solutions \( A = \{0, 2, 3\} \) with \(|A| = 3\).
+  - Consider a set of solutions $A = \{0, 2, 3\}$ with $|A| = 3$.
   - If we use 2-bit encoding:
     - `00 → 0`
-    - `01 → 1` (invalid)
+    - `01 → 1` (invalid -> infeasible)
     - `10 → 2`
     - `11 → 3`
   - The mapping is not efficient due to redundant strings (`01`).
 
-#### **Precision Issue in Continuous Search Spaces**
+#### 5.5.3 **Precision Issue in Continuous Search Spaces**
 - Encoding a continuous number requires a finite-length binary string, leading to precision loss.
 - Example:
-  - \( x \in [-5, 5] \) encoded as a 12-bit binary string.
-  - The precision depends on \( L \), making large-dimensional problems challenging.
+  - $x \in [-5, 5]$ encoded as a 12-bit binary string.
+  - The precision depends on $L$, making large-dimensional problems challenging.
 
 ---
 
-## 8. Real-Valued Vector Representation
+## 6. Real-Valued Vector Encoding
 
-### 9.1 Why Use Real-Valued Encoding?
-- More natural representation for continuous optimization problems.
-- Avoids issues like redundancy and precision loss.
-- No distinction between genotype and phenotype; the chromosome is simply a vector of real numbers.
-- Used in **Evolution Strategies (ES), Evolutionary Programming (EP), and Differential Evolution (DE).**
+A more natural representation for continuous optimization problems that avoids issues like redundancy and precision loss.
 
 #### **Advantages:**
 - No encoding/decoding overhead.
 - Better numerical precision.
 - Easily scalable for high-dimensional problems.
 
-### 9.2 Representation:
+### 6.1 Representation:
+- No distinction between genotype and phenotype; the chromosome is simply a vector of real numbers.
+
 Each solution is represented as:
-\[ x = [x_1, x_2, \dots, x_n] \in \mathbb{R}^n \]
+$x = [x_1, x_2, \dots, x_n] \in \mathbb{R}^n$
 
 Each gene corresponds to a variable in the optimization problem.
 
 ---
 
-## 10. Variation Operators for Real-Valued Encoding
+### 6.2 Variation Operators for Real-Valued Encoding
 
-### 10.1 Mutation
-Randomly selects a parent with probability \( p_m \) and modifies a gene.
+#### Mutation
+Randomly selects a parent with probability $p_m$ and modifies a gene.
 
-#### **Types of Mutation:**
+**Types of Mutation:**
 1. **Uniform Mutation**:
-   - A gene is replaced with a random value within its allowed range.
-   - \( x_i \leftarrow U(u_i, v_i) \) where \( U \) is uniform distribution.
+   - A gene $c_i$ is replaced with a random (uniform) value $c_i'$ within its allowed range $x_i ∈ [u_i, v_i]$.
 
 2. **Gaussian Mutation**:
-   - A gene is perturbed by adding Gaussian noise.
-   - \[ x_i' = \min(\max(N(x_i, \sigma_i), u_i), v_i) \]
-   - \( \sigma_i \) is often set relative to the search space size (e.g., \( \sigma_i = \frac{1}{10} (v_i - u_i) \)).
+   - A gene $c_i$ is replaced with $c_i'$ by adding Gaussian noise.
+   - $c_i' = \min(\max(N(c_i, \sigma_i), u_i), v_i)$
+   - Where $N(c_i, \sigma_i)$ is a Gaussian distributuion with mean $c_i$ and standard deviation $\sigma_i$.
+   - $u_i$ and $v_i$ are the lower and upper bounds of the variable, ensuring the mutation stays within valid limits.
+   - The standard deviation $\sigma_i$ determines the spread of the mutation. Typically set as $\sigma_i = 1/10 l_i$ where $l_i = v_i - u_i$ is the length of the variable's allowed range. The Larger the $\sigma_i$, the bigger the changes.
 
 3. **Non-Uniform Mutation**:
    - Mutation strength decreases over generations.
    - Formula:
-     \[
-     x_i' = \begin{cases}
-     x_i + \Delta(t, v_i - x_i) & \text{if } \tau \geq 0.5 \\
-     x_i - \Delta(t, x_i - u_i) & \text{if } \tau < 0.5
-     \end{cases}
-     \]
-   - \( \Delta(t, y) = y (1 - r^{(1 - \frac{t}{g_m})^b}) \)
+     
+ $$
+ c_i' = \begin{cases}
+ c_i + \Delta(t, v_i - c_i) & \text{if } \tau \geq 0.5 \\
+ c_i - \Delta(t, c_i - u_i) & \text{if } \tau < 0.5
+ \end{cases}
+ $$
 
+- Where t is the number of current generation and $\tau$ is a random number in the range [0,1] deciding whether the mutation increases or decreases $c_i$ and $\Delta(t, y) = y (1 - r^{(1 - \frac{t}{g_m})^b})$ determines how much mutation occurs
 
-### 10.2 Crossover
-Combines genetic material from two parents to create offspring.
-
-#### **Types of Crossover:**
-
-1. **Flat Crossover**:
-   - Offspring genes are randomly selected within the range of parent values.
-   - \( h_i \in [x_i^{(1)}, x_i^{(2)}] \)
-
-2. **Simple Crossover**:
-   - Selects a random crossover point and swaps genes beyond that point.
-   - Example:
-     - Parent 1: `[1.5, 2.3, 3.8, 4.0]`
-     - Parent 2: `[1.2, 3.1, 2.9, 5.2]`
-     - Offspring 1: `[1.5, 2.3, 2.9, 5.2]`
-     - Offspring 2: `[1.2, 3.1, 3.8, 4.0]`
-
-3. **Whole Arithmetic Crossover**:
-   - Uses a weighted average:
-     \[ h_i^{(1)} = \alpha x_i^{(1)} + (1 - \alpha) x_i^{(2)} \]
-     \[ h_i^{(2)} = \alpha x_i^{(2)} + (1 - \alpha) x_i^{(1)} \]
-   - \( \alpha \) is a random value between 0 and 1.
-
-4. **BLX-\(\alpha\) Crossover**:
-   - Offspring gene is sampled from a broader range than parents.
-   - \[ h_i \in [h_{\min} - I \cdot \alpha, h_{\max} + I \cdot \alpha] \]
-   - \( h_{\min} \) and \( h_{\max} \) are min and max values among parents.
+- Where r is a random number in the range of [0,1], and $g_m$ is the maximum number of generations and b is a constant controlling the mutation rate.
 
 ---
 
-## 11. Selection
+#### Crossover
+Combines genetic material from two parents to create offspring.
 
-### 11.1 Generic Evolutionary Algorithm
+**Types of Crossover:**
+
+1. **Flat Crossover**:
+   - Offspring genes are randomly selected within the range of parent values.
+   - $h_i \in [x_i^{(1)}, x_i^{(2)}]$ or $h_i \in [x_i^{(2)}, x_i^{(1)}]$
+   - **Intuition:** This allows uniform sampling within the range of the two parents, ensuring diversity in offspring.
+
+2. **Simple Crossover**:
+   - Selects a random crossover point and swaps genes beyond that point.
+   - **Intuition:** This preserves partial structure from parents but introduces diversity by swapping sections.
+   - Example:
+     - Parent 1:    `[1.5, 2.3, | 3.8, 4.0]`
+     - Parent 2:    `[1.2, 3.1, | 2.9, 5.2]`
+     - Offspring 1: `[1.5, 2.3, | 2.9, 5.2]`
+     - Offspring 2: `[1.2, 3.1, | 3.8, 4.0]`
+
+3. **Whole Arithmetic Crossover**:
+   - Uses a weighted average:
+     $h_i^{(1)} = \alpha x_i^{(1)} + (1 - \alpha) x_i^{(2)}$
+     $h_i^{(2)} = \alpha x_i^{(2)} + (1 - \alpha) x_i^{(1)}$
+   - $\alpha$ is a random value between 0 and 1.
+   - **Intuition:** This creates offspring that are a weighted average of the parents, which helps in smooth interpolation of solutions.
+
+4. **Local Arithmetic Crossover**:    
+    - Works like whole arithmetic crossover, but 𝛼 is a vector instead of a scalar.
+    - Each gene in the offspring gets a different random weight.
+    - **Intuition:** Provides more fine-grained control over crossover, allowing some genes to be more influenced by one parent than others.
+    
+5. **Single Arithmetic Crossover**:     
+    - A single gene (feature) is chosen and replaced by the arithmetic mean of that gene from both parents.
+  All other genes remain the same.
+    - **Intuition:** Introduces a small, controlled variation in offspring, ensuring similarity to parents but with slight improvement.
+
+7. **BLX- $\alpha$ Crossover**:
+   - Offspring gene is sampled from a broader range than parents.
+   - $h_i \in [h_{\min} - I \cdot \alpha, h_{\max} + I \cdot \alpha]$
+     - $h_{\min}$ and $h_{\max}$ are min and max values among parents.
+   - **Intuition:** Extends the search space beyond the parents' range, allowing more exploration and potentially better solutions.
+
+---
+
+## 7. Selection
+
+### 7.1 Generic Evolutionary Algorithm
 
 ```
 X0 := generate initial population of solutions
@@ -299,7 +353,7 @@ while (terminationflag != true):
 Output best solution found
 ```
 
-### 11.2 Selection Process
+### 7.2 Selection Process
 - **Not a search operator** but heavily influences search performance.
 - **Precedes variation operators**: selects individuals for breeding.
 - **Key Idea:**
@@ -310,7 +364,7 @@ Output best solution found
 - Prevents premature convergence.
 - Avoids getting stuck in local optima.
 
-### 11.3 Selection Schemes
+### 7.3 Selection Schemes
 1. **Fitness Proportional Selection (Roulette Wheel Selection)**
 2. **Ranking Selection**
 3. **Truncation Selection**
@@ -319,7 +373,7 @@ Output best solution found
 
 ---
 
-### 11.4 Fitness Proportional Selection
+### 7.4 Fitness Proportional Selection
 - **Definition:** Each individual is selected with probability:
   \[
 p_i = \frac{f_i}{\sum_{j=1}^{M} f_j}
@@ -341,7 +395,7 @@ p_i = \frac{f_i}{\sum_{j=1}^{M} f_j}
 
 ---
 
-### 11.5 Ranking Selection
+### 7.5 Ranking Selection
 - Sort population from best to worst based on fitness.
 - Selection probability \( p(γ) \) is assigned based on rank \( γ \):
   - **Linear Ranking:**
@@ -352,7 +406,7 @@ p_i = \frac{f_i}{\sum_{j=1}^{M} f_j}
 
 ---
 
-### 11.6 Truncation Selection
+### 7.6 Truncation Selection
 - **Steps:**
   1. Rank individuals by fitness.
   2. Select top \( k \)% for reproduction (e.g., top 50% or 30%).
@@ -362,7 +416,7 @@ p_i = \frac{f_i}{\sum_{j=1}^{M} f_j}
 
 ---
 
-### 11.7 Tournament Selection
+### 7.7 Tournament Selection
 - **Steps:**
   1. Randomly select \( k \) individuals from population.
   2. Choose the fittest individual from the subset.
@@ -373,7 +427,7 @@ p_i = \frac{f_i}{\sum_{j=1}^{M} f_j}
 
 ---
 
-### 11.7 (μ+λ) and (μ,λ) Selection
+### 7.7 (μ+λ) and (μ,λ) Selection
 - Used in **Evolution Strategies**.
 
 #### **(μ+λ) Selection:**
@@ -389,7 +443,7 @@ p_i = \frac{f_i}{\sum_{j=1}^{M} f_j}
 
 ---
 
-### 11.8 Selection Pressure
+### 7.8 Selection Pressure
 **Selection Pressure:** Degree to which selection favors better individuals.
 
 #### **Effects:**
@@ -410,7 +464,7 @@ p_i = \frac{f_i}{\sum_{j=1}^{M} f_j}
 
 ---
 
-## 12. Reproduction
+## 8. Reproduction
 
 ### Genetic Algorithm Reproduction Strategies
 - **Reproduction controls how the next generation is created.**
